# audiopatch

./: .dockerignore  .editorconfig  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  rust-toolchain.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.md  security-report.md
.github/workflows/: auto-assign.yml  publish_docker_image.yml  test-worker.yml
infra/: docker-compose.dev.yml  docker-compose.yml
src/: main.rs
src/routes/: index.rs  mod.rs  notfound.rs
