[package]
name = "audiopatch"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["trace"] }
axum = { version = "0.8.5", features = ["macros"] }

lame = "0.1.3"
symphonia = "0.5.4"

tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
